services/openldap/k8s/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: openldap
spec:
  selector:
    matchLabels:
      app: openldap 
  serviceName: openldap
  replicas: 1
  template:
    metadata:
      labels:
        app: openldap
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: openldap
        image: openldap:2.6
        ports:
        - containerPort: 1389
          name: openldap
        - containerPort: 1636
          name: openldap-sec
        volumeMounts:
        - name: data
          mountPath: /bitnami/openldap
          
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: 
          - "ReadWriteOnce"
        # storageClassName: ""
        resources:
          requests:
            storage: 1Gi
