services/openldap/k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: openldap
  labels:
    app: openldap
spec:
  ports:
  - port: 1389
    name: openldap
  - port: 1636
    name: openldap-sec
  clusterIP: None
  selector:
    app: openldap
---
apiVersion: v1
kind: Service
metadata:
  name: lam
  labels:
    app: lam
spec:
  ports:
  - port: 1389
    name: lam
  clusterIP: None
  selector:
    app: lam
