services/openldap/k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openldap
spec:
  ingressClassName: nginx
  rules:
  - host: openldap.vnmntn.com
    http:
      paths:
      - backend:
          service:
            name: openldap
            port:
              number: 9200
        path: /
        pathType: Prefix
